--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ img {
   align-items: center;
 }
 
-.logo {
+.nav-section .logo {
   margin-right: 93px;
   padding: 24px 0 25px 0;
 }
@@ -191,10 +191,9 @@ img {
 }
 /*------Позиционирование Портфолио----*/
 
-.filter-buttons {
+.filter-list {
   display: flex;
   justify-content: center;
-  margin-top: 94px;
   margin-bottom: 50px;
 }
 
@@ -208,48 +207,53 @@ img {
   border-radius: 4px;
 }
 
-.project-items {
+.project-list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 94px;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 
 .project-item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc(100% / 4 - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
 }
-.project-item:nth-child(3n + 3) {
+/*.project-item:nth-child(3n + 3) {
   margin-right: 0px;
 }
 .project-item:nth-child(n + 7) {
   margin-bottom: 0px;
-}
+}*/
 
 .project-content {
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
   border: 1px solid var(--border-color);
   border-top: none;
 }
 .project-title {
-  /*text-align: start;*/
-  margin: 0 24px 4px 24px;
+  margin-bottom: 4px;
 }
-.project-text {
-  margin: 0 24px 0 24px;
-}
+
 /*------Позиционирование footer----*/
 .footer-block {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.footer-block .logo {
+  display: block;
+  margin-bottom: 20px;
+}
 
-.address-items {
+.address-list {
   display: flex;
-  margin-top: 20px;
   flex-direction: column;
 }
-.address-li-item:not(:last-child) {
+
+.address-item:not(:last-child) {
   margin-bottom: 9px;
 }
 :root {
@@ -309,8 +313,8 @@ body {
 .nav-section-link:focus,
 .header-link:hover,
 .header-link:focus,
-.address-item:hover,
-.address-item:focus,
+.address-link:hover,
+.address-link:focus,
 .current {
   color: var(--accent-color);
 }
@@ -324,7 +328,7 @@ body {
   background-color: var(--bg-dark-color);
 }
 
-.address-item {
+.address-link {
   font-style: normal;
   line-height: 1.7;
   color: var(--footer-white-color);
@@ -429,6 +433,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--title-dark-gray-color);
   background-color: var(--bg-light-color);
+  cursor: pointer;
 }
 
 .filter-button:hover,
@@ -436,7 +441,8 @@ body {
 .current-filter {
   color: var(--white-color);
   background-color: var(--accent-color);
-  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*--------------Проекты----------*/
