--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ img {
 /*------Позиционирование header----*/
 
 .header-block {
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid var(--header-border-color);
 }
 
 .header-container {
@@ -165,7 +165,7 @@ img {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--project-border-color);
   border-top: none;
 }
 
@@ -194,8 +194,8 @@ img {
   --footer-white-color: #ffffff9a;
   --bg-light-color: #f5f4fa;
   --bg-dark-color: #2f303a;
-  --project-bg-color: #eeeeee;
-  --border-color: #ececec;
+  --project-border-color: #eeeeee;
+  --header-border-color: #ececec;
 }
 
 body {
@@ -371,7 +371,6 @@ body {
   line-height: 1.2;
   color: var(--text-gray-color);
   text-align: center;
-  margin-bottom: 30px;
 }
 
 /*------------Портфолио----------*/
@@ -405,7 +404,7 @@ body {
 /*--------------Проекты----------*/
 
 .project-item {
-  background-color: var(--project-bg-color);
+  background-color: var(--white-color);
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
